# RayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Editor/src/: Editor.cpp  Editor.h  Window.cpp  Window.h  main.cpp
Editor/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Layer.h  TestLayer.cpp  TestLayer.h
Editor/src/ImGui/Platform/: Platforms.cpp  Platforms.h
Editor/src/Layer/: Layer.cpp  Layer.h  MenuLayer.cpp  MenuLayer.h  RtLayer.cpp  RtLayer.h  SkyboxLayer.h  TestLayer.cpp
Editor/src/Layers/: MenuLayer.cpp  MenuLayer.h  MoveLayer.cpp  MoveLayer.h  RtLayer.cpp  RtLayer.h  SkyboxLayer.cpp  SkyboxLayer.h  TestLayer.cpp  TestLayer.h
Editor/src/OpenGL/: OpenGL.cpp  OpenGL.h  Texture.cpp  Texture.h
Editor/src/Window/: Window.cpp  Window.h
RayTracer/: CMakeLists.txt
RayTracer/src/: Camera.cpp  Camera.h  Hello.cpp  Hello.h  RayTracer.cpp  RayTracer.h
RayTracer/src/Debug/: Debug.h
RayTracer/src/Enviroment/: World.cpp  World.h
RayTracer/src/Enviroment/Shapes/: Plane.cpp  Plane.h  Shape.cpp  Shape.h  ShapeWorld.cpp  ShapeWorld.h  Sphere.cpp  Sphere.h
RayTracer/src/Image/: AccImage.cpp  AccImage.h  Image.cpp  Image.h
RayTracer/src/Math/: Math.cpp  Math.h  Random.cpp  Random.h
RayTracer/src/Scene/: Scene.cpp  Scene.h
RayTracer/src/Shapes/: Shape.h  ShapeWorld.cpp  ShapeWorld.h  Sphere.cpp  Sphere.h
RayTracer/src/Utils/: Material.cpp  Material.h  Ray.cpp  Ray.h  Timer.cpp  Timer.h
RayTracer/src/Utils/Shapes/: Shape.h  Sphere.cpp  Sphere.h
src/: Window.cpp  Window.h  main.cpp  rtpch.h
